Remove preview features from test class